[project]
name = "python-backup-file-encrypter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "pydantic-settings>=2.13.1",
    "typer>=0.24.1",
]

packages = [
    "src/",
]
[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"